fix layout shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ a {
 .banner {
 	z-index: -1;
 	top: 0;
+	min-height: 40vh;
 }
 .container-img {
 	width: 25%;
@@ -269,6 +270,7 @@ a {
 }
 .badge {
 	width: 180px;
+	height: 60px;
 }
 .w25 {
 	width: 25%;
@@ -325,6 +327,9 @@ a {
 }
 /* Responsivo */
 @media only screen and (max-width: 808px) {
+	.banner {
+		min-height: 15vh;
+	}
 	.episodio > img {
 		max-width: 50%;
 	}
